// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Desktop version <NavItem/> renders the desktop version of the component <NavItem /> 1`] = `
<styles__MenuItem
  isOpen={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <styles__SubmenuToggle
    aria-controls="nav-learn"
    aria-expanded={false}
    aria-haspopup="true"
    href="#"
    onClick={[Function]}
  >
    <span>
      Learn
    </span>
    <ChevronDown />
  </styles__SubmenuToggle>
  <Submenu
    isOpen={false}
    item={
      Object {
        "desc": "Cupcake ipsum dolor sit. Amet dragée chocolate donut. Jelly-o chupa chups liquorice chocolate.",
        "id": "nav-learn",
        "submenu": Array [
          Object {
            "heading": "Jelly-o chupa chups",
            "links": Array [
              Object {
                "title": "Cupcake ipsum dolor sit",
                "url": "/",
              },
              Object {
                "title": "Cupcake ipsum sit",
                "url": "/",
              },
              Object {
                "title": "Cupcake dolor sit",
                "url": "/",
              },
              Object {
                "title": "Cupcake ipsum dolor",
                "url": "/",
              },
            ],
          },
          Object {
            "heading": "Icing gummi bears powder",
            "links": Array [
              Object {
                "title": "Amet dragée donut",
                "url": "/",
              },
              Object {
                "title": "Amet dragée chocolate donut",
                "url": "/",
              },
            ],
          },
          Object {
            "heading": "Bear claw pastry bonbon",
            "links": Array [
              Object {
                "title": "Carrot cake fruitcake",
                "url": "/",
              },
              Object {
                "title": "Carrot cake muffin fruitcake",
                "url": "/",
              },
            ],
          },
        ],
        "title": "Learn",
        "url": "/",
      }
    }
    setNavItemOpen={[Function]}
    setNavOpen={[Function]}
  />
</styles__MenuItem>
`;

exports[`Mobile version <NavItem/> renders the mobile version of the component <NavItem /> 1`] = `
<styles__MenuItem
  isOpen={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <styles__SubmenuToggle
    aria-controls="nav-learn"
    aria-expanded={false}
    aria-haspopup={false}
    href="#"
    onClick={[Function]}
  >
    <span>
      Learn
    </span>
    <ChevronDown />
  </styles__SubmenuToggle>
  <Submenu
    isOpen={false}
    item={
      Object {
        "desc": "Cupcake ipsum dolor sit. Amet dragée chocolate donut. Jelly-o chupa chups liquorice chocolate.",
        "id": "nav-learn",
        "submenu": Array [
          Object {
            "heading": "Jelly-o chupa chups",
            "links": Array [
              Object {
                "title": "Cupcake ipsum dolor sit",
                "url": "/",
              },
              Object {
                "title": "Cupcake ipsum sit",
                "url": "/",
              },
              Object {
                "title": "Cupcake dolor sit",
                "url": "/",
              },
              Object {
                "title": "Cupcake ipsum dolor",
                "url": "/",
              },
            ],
          },
          Object {
            "heading": "Icing gummi bears powder",
            "links": Array [
              Object {
                "title": "Amet dragée donut",
                "url": "/",
              },
              Object {
                "title": "Amet dragée chocolate donut",
                "url": "/",
              },
            ],
          },
          Object {
            "heading": "Bear claw pastry bonbon",
            "links": Array [
              Object {
                "title": "Carrot cake fruitcake",
                "url": "/",
              },
              Object {
                "title": "Carrot cake muffin fruitcake",
                "url": "/",
              },
            ],
          },
        ],
        "title": "Learn",
        "url": "/",
      }
    }
    setNavItemOpen={[Function]}
    setNavOpen={[Function]}
  />
</styles__MenuItem>
`;
